[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/RoomDialog.gd" type="Script" id=1]

[node name="RoomDialog" type="WindowDialog"]
margin_right = 400.0
margin_bottom = 350.0
window_title = "Room"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 320.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 400.0
margin_bottom = 320.0
size_flags_horizontal = 3

[node name="SkyboxLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 20.0
text = "Skyboxes"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 400.0
margin_bottom = 320.0
size_flags_vertical = 3

[node name="Skyboxes" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
margin_right = 400.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 400.0
margin_bottom = 350.0
alignment = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 348.0
margin_right = 400.0
margin_bottom = 26.0
disabled = true
text = "Apply"
[connection signal="about_to_show" from="." to="." method="_on_RoomDialog_about_to_show"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ApplyButton" to="." method="_on_ApplyButton_pressed"]
